XG boost gs with new split

--- a/EDA and Data_Clensing.ipynb
+++ b/EDA and Data_Clensing.ipynb
@@ -2901,6 +2901,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Feature Engineering"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Calculate Annual Total Loan Premium for X_train and X_test"
    ]
   },
