updated model nb

--- a/EDA and Data_Clensing.ipynb
+++ b/EDA and Data_Clensing.ipynb
@@ -1,8 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Loan default prediction is of paramount importance in the financial industry as it plays a crucial role in mitigating risks and ensuring the stability of lending institutions. By harnessing advanced analytics and machine learning algorithms, financial institutions can assess the creditworthiness of potential borrowers more accurately. This proactive approach enables lenders to identify and flag high-risk individuals or businesses, reducing the likelihood of defaults. Predictive models analyze a numerous variables, such as credit history, income stability, loan premium, LTV etc. and providing a comprehensive evaluation of a borrower's ability to repay a loan. Timely prediction of loan defaults not only protects financial institutions from potential financial losses but also fosters responsible lending practices. Ultimately, the ability to forecast loan defaults empowers lenders to make informed decisions, maintain a healthy loan portfolio, and contribute to the overall stability of the financial system.\n",
+    "\n",
+    "The note book covers the data clensing, handling missing values to preprocess data for model building process. Also basic exploratory data analysis of the dataset included in this notebook.\n",
+    "\n",
+    "kaggle [dataset](https://www.kaggle.com/datasets/gauravduttakiit/bank-fears-loanliness) on loan portfolio status had been used to develop the predictive model."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3144,6 +3162,13 @@
    ],
    "source": [
     "df_test['loan_status'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Save test and train dataframes to use for model building"
    ]
   },
   {
